--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           />
         </span>
         <span class="user-bell" role="complementary">
-          <div class="bell-box" aria-label="Notifications">
+          <button class="bell-box" aria-label="Notifications">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="20"
@@ -83,13 +83,13 @@
                 fill="#E3E3E3"
               />
             </svg>
-          </div>
-          <div class="user" aria-label="User Profile">
+          </button>
+          <button class="user" aria-label="User Profile">
             <p class="user-name">Davii Collections</p>
             <div class="name-initial-box">
               <p class="name-initial">DC</p>
             </div>
-          </div>
+          </button>
         </span>
       </nav>
     </header>
@@ -171,7 +171,7 @@
         <article class="step-guide-data">
           <!-- First detail block -->
           <section
-            class="step-guide-detail"
+            class="step-guide-detail show-guide"
             role="region"
             aria-labelledby="customize-header"
           >
@@ -197,10 +197,7 @@
                 </svg>
               </span>
               <div class="guide-detail">
-                <h3
-                  id="customize-header"
-                  class="guide-title active-guide-title"
-                >
+                <h3 id="customize-header" class="guide-title">
                   Customize your online store
                 </h3>
                 <span class="guide-txt">
