just another commit

--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
                   height="24"
                   viewBox="0 0 24 24"
                   fill="none"
+                  class="broken-circle-icon"
                 >
                   <circle
                     cx="12"
